Update script CMakeLists : - Fix  CPACK or zip creation, the previous release 3.1.1 doesnt works because the tools windeployqt  was not used. - Update script  to generate with visual studio >= 2013 . - Update with default Qt version=5.9.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,17 @@ cmake_minimum_required(VERSION 2.8.11)
 
 project(MidiEditor)
 
+
 configure_file(
   ${CMAKE_SOURCE_DIR}/version.cmake.in
   ${CMAKE_BINARY_DIR}/version.cmake
 )
 include_directories(${CMAKE_BINARY_DIR})
+include(${CMAKE_BINARY_DIR}/version.cmake)
 
 # check compiler
-if(MSVC12)
+# if visual studio >= vc12.0
+if(MSVC AND ((MSVC_VERSION GREATER 1800) OR (MSVC_VERSION EQUAL 1800)) )
 	message(STATUS "Your compiler is managed")
 elseif(CMAKE_COMPILER_IS_GNUCXX)
 	message(STATUS "Your compiler is managed")
@@ -19,15 +22,20 @@ endif()
 
 option(INSTALL_WITH_CPACK "Make deployment on Windows installer or Linux DEB file" OFF )
 
-if(MSVC12)
+if(CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 )
+	SET(ARCH "x64")
+else()
+	SET(ARCH "x86")
+endif()
+MESSAGE(STATUS "ARCH = ${ARCH}")
+
+if(MSVC)
 	option(NO_CONSOLE_MODE "Have a console to debuging" OFF)
-	if( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 )
-		set(QT5_DIR "C:/Qt/5.7/msvc2013_64/lib/cmake" CACHE STRING "Additional search paths for QT5")
-		SET(ARCH "x64")
-	else( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 )
-		set(QT5_DIR "C:/Qt/5.7/msvc2013/lib/cmake" CACHE STRING "Additional search paths for QT5")
-		SET(ARCH "x86")
-	endif( CMAKE_CL_64 OR CMAKE_SIZEOF_VOID_P EQUAL 8 )
+	if(ARCH STREQUAL "x64" ) 
+		set(QT5_DIR "C:/Qt/5.9.1/msvc2015_64/lib/cmake" CACHE STRING "Additional search paths for QT5")
+	else()
+		set(QT5_DIR "C:/Qt/5.9.1/msvc2015/lib/cmake" CACHE STRING "Additional search paths for QT5")
+	endif()
 	find_path(Qt5Widgets_DIR Qt5WidgetsConfig.cmake PATHS "${QT5_DIR}/Qt5Widgets" )
 	find_path(Qt5Network_DIR Qt5NetworkConfig.cmake PATHS "${QT5_DIR}/Qt5Network" )
 	find_path(Qt5Xml_DIR     Qt5XmlConfig.cmake     PATHS "${QT5_DIR}/Qt5Xml"     )
@@ -37,7 +45,7 @@ if(MSVC12)
 		add_definitions(-DNO_CONSOLE_MODE)
 	endif()
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP") # multi processor compiliation.
-	MESSAGE(STATUS "ARCH = ${ARCH}")
+	
 else()
     add_definitions(-std=c++11)
 	add_definitions(-D__LINUX_ALSASEQ__)
@@ -109,8 +117,22 @@ add_executable(MidiEditor
 
 include(ressources.cmake)
 set(MidiEditorDep Qt5::Widgets Qt5::Network Qt5::Xml)
-if(MSVC12)
+
+
+# prepare outup directory 
+set(NAME_RELEASE MidiEditor_${ARCH}_${GIT_TAG})
+set(DIR_NAME_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/${NAME_RELEASE})
+set_target_properties( MidiEditor PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DIR_NAME_RELEASE})
+add_dependencies(MidiEditor ressources)
+add_custom_command(TARGET ressources POST_BUILD   COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/ressources.rcc ${DIR_NAME_RELEASE}/ressources.rcc )
+add_custom_command(TARGET MidiEditor POST_BUILD 
+                   COMMAND ${QT5_DIR}/../../bin/windeployqt ${DIR_NAME_RELEASE}
+				   COMMAND ${CMAKE_COMMAND} -E tar "cfv" "${NAME_RELEASE}.zip" --format=zip ${DIR_NAME_RELEASE} )
+file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/run_environment/metronome/metronome-01.wav" DESTINATION ${DIR_NAME_RELEASE}/metronome)
+
+if(MSVC)
 	target_link_libraries(MidiEditor Winmm.lib ${MidiEditorDep})
+	
 	if(NO_CONSOLE_MODE)
 		set_target_properties(MidiEditor PROPERTIES  LINK_FLAGS "/SUBSYSTEM:WINDOWS")
 	endif()
@@ -134,11 +156,8 @@ file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/run_environment/midieditor.ico" DESTINATI
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/run_environment/metronome/metronome-01.wav" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/metronome)
 
 if(INSTALL_WITH_CPACK)
-	install(TARGETS MidiEditor DESTINATION bin)
-	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/ressources.rcc" DESTINATION bin)
-	install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/run_environment/metronome/metronome-01.wav" DESTINATION bin/metronome)
+	install(DIRECTORY "${DIR_NAME_RELEASE}/" DESTINATION bin)
 	if(WIN32)#Windows
-		install(FILES ${QT5_DLLs_DEP_RELEASE} DESTINATION bin)
 		set(CPACK_GENERATOR NSIS)
 		set(CPACK_PACKAGE_INSTALL_DIRECTORY "MidiEditor")
 		set(CPACK_PACKAGE_EXECUTABLES "MidiEditor" "MidiEditor" ${CPACK_PACKAGE_EXECUTABLES}) 
@@ -155,9 +174,6 @@ if(INSTALL_WITH_CPACK)
 	set(CPACK_PACKAGE_NAME "MidiEditor")
 	set(CPACK_PACKAGE_VENDOR "https://github.com/abreheret/MidiEditor")
 	set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "MidiEditor - Installation ")
-	set(CPACK_PACKAGE_VERSION "3.1.1")
-	set(CPACK_PACKAGE_VERSION_MAJOR "3")
-	set(CPACK_PACKAGE_VERSION_MINOR "1")
-	set(CPACK_PACKAGE_VERSION_PATCH "1")
+	set(CPACK_PACKAGE_VERSION ${GIT_TAG})
 	INCLUDE(CPack)
 endif()
