--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_install:
     - QT_VERSION_MM=59
     - QT_VERSION_FULL=591-trusty
     - sudo apt-add-repository --yes ppa:beineri/opt-qt$QT_VERSION_FULL && sudo apt-get update -qq && sudo apt-get install -qq qt${QT_VERSION_MM}base qt${QT_VERSION_MM}script qt${QT_VERSION_MM}tools && export CMAKE_PREFIX_PATH=/opt/qt${QT_VERSION_MM}
+    - sudo apt-get install libsfml-dev
+    - sudo apt-get install libasound2-dev
     
 before_script:
    - mkdir build
