--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
     - sudo apt-add-repository --yes ppa:beineri/opt-qt$QT_VERSION_FULL && sudo apt-get update -qq && sudo apt-get install -qq qt${QT_VERSION_MM}base qt${QT_VERSION_MM}script qt${QT_VERSION_MM}tools && export CMAKE_PREFIX_PATH=/opt/qt${QT_VERSION_MM}
     - sudo apt-get install libsfml-dev
     - sudo apt-get install libasound2-dev
+    - sudo apt-get install curl
     
 before_script:
    - mkdir build
@@ -23,4 +24,4 @@ before_script:
    - cmake .. -DCMAKE_BUILD_TYPE=$CONFIG -DDISABLE_MAINTAINER_CFLAGS=off
 
 script:
-   - cmake --build . --config $CONFIG
+   - cmake --build . --config $CONFIG --target upload_file
