--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,9 @@ environment:
 
   matrix:
     - GENERATOR: "Visual Studio 14 Win64"
-      QT5_DIR: "C:/Qt/5.9.3/msvc2015_64/lib/cmake"
+      QT5_DIR: C:/Qt/5.9.3/msvc2015_64/lib/cmake
     - GENERATOR: "Visual Studio 14"
-      QT5_DIR: "C:/Qt/5.9.3/msvc2015/lib/cmake"
+      QT5_DIR: C:/Qt/5.9.3/msvc2015/lib/cmake
     
 install:
     - cmd: echo "GENERATOR=%GENERATOR% CONFIG=%CONFIG% NO_CONSOLE=%NO_CONSOLE%"
@@ -20,5 +20,5 @@ install:
 build_script:
     - cmd: mkdir build
     - cmd: cd build
-    - cmd: cmake .. -DINSTALL_WITH_CPACK=ON -DNO_CONSOLE_MODE=%NO_CONSOLE% -DQT5_DIR="%QT5_DIR%" -G"%GENERATOR%"
+    - cmd: cmake .. -DINSTALL_WITH_CPACK=ON -DNO_CONSOLE_MODE=%NO_CONSOLE% -DQT5_DIR=%QT5_DIR% -G"%GENERATOR%"
     - cmd: cmake --build . --config %CONFIG% --target cpack_file
