Make "pre-build" script work everywhere
custom command with "PRE-BUILD" will just NOT work in dependence on a generator:
https://stackoverflow.com/questions/26216570/cmake-add-custom-command-with-pre-build-does-not-work

Instead, is need to make the same command to be a "target" and attach it as dependency to the main target:
https://stackoverflow.com/questions/16408060/how-to-add-a-dependency-on-a-script-to-a-target-in-cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ else()
 	find_path(Qt5Xml_DIR     Qt5XmlConfig.cmake     PATHS "${QT5_DIR}/Qt5Xml"     )
 endif()
 
-if(ARCH STREQUAL "x64" ) 
+if(ARCH STREQUAL "x64" )
 	add_definitions(-D__ARCH64__)
 endif()
 
@@ -125,7 +125,11 @@ if(MSVC12)
 else()
 	target_link_libraries(MidiEditor asound sfml-system sfml-audio pthread ${MidiEditorDep})
 endif()
-add_custom_command(TARGET MidiEditor PRE_BUILD COMMAND cmake -P ${CMAKE_BINARY_DIR}/version.cmake)
+
+add_custom_target(MakeVersion ALL ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/version.cmake)
+add_dependencies(MidiEditor MakeVersion)
+
+# add_custom_command(TARGET MidiEditor PRE_BUILD COMMAND cmake -P ${CMAKE_BINARY_DIR}/version.cmake)
 
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/run_environment/midieditor.ico" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/run_environment/metronome/metronome-01.wav" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/metronome)
@@ -138,13 +142,13 @@ if(INSTALL_WITH_CPACK)
 		install(FILES ${QT5_DLLs_DEP_RELEASE} DESTINATION bin)
 		set(CPACK_GENERATOR NSIS)
 		set(CPACK_PACKAGE_INSTALL_DIRECTORY "MidiEditor")
-		set(CPACK_PACKAGE_EXECUTABLES "MidiEditor" "MidiEditor" ${CPACK_PACKAGE_EXECUTABLES}) 
+		set(CPACK_PACKAGE_EXECUTABLES "MidiEditor" "MidiEditor" ${CPACK_PACKAGE_EXECUTABLES})
 		set(CPACK_NSIS_MODIFY_PATH OFF)
 	else() #UNIX
 		set(CPACK_GENERATOR "DEB")
 		SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Amaury Bréhéret")
 		set (CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5widgets5:amd64 (>=5.7), libqt5network5:amd64 (>=5.7), libqt5xml:amd64 (>=5.7), libsfml-system,libsfml-audio,libasound,libpthread")
-		#set(CPACK_DEBIAN_PACKAGE_DEPENDS "qt5-default (>= 5.7),libsfml-system,libsfml-audio,libasound,libpthread") 
+		#set(CPACK_DEBIAN_PACKAGE_DEPENDS "qt5-default (>= 5.7),libsfml-system,libsfml-audio,libasound,libpthread")
 		#set(CPACK_DEBIAN_PACKAGE_DEPENDS "libQt5Widgets,libQt5Network,libQt5Xml,libQt5Core,libsfml-system,libsfml-audio,libasound,libpthread")
 		set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 	endif()
